tests/trybuild-failures/not_binary_expression.stderr
error[E0308]: mismatched types
 --> $DIR/not_binary_expression.rs:4:16
  |
4 |     assertify!("foo");
  |                ^^^^^ expected bool, found reference
  |
  = note: expected type `bool`
             found type `&'static str`
